# PD_Sniffer_FW_Utility

./: .gitignore  README.md
USB_Decoding/: ARCHITECTURE_WALKTHROUGH.adoc  CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PACKET_REASSEMBLY.md  USB_Decoding_FW_utility_arch.html  USB_READ_SIZE_UPDATE.md  pyproject.toml  test_reassembly.py  usbpd_gui.py  usbpd_gui.spec  usbpd_txt_decoder.py  usbpd_txt_decoder.spec
USB_Decoding/.claude/: settings.local.json
USB_Decoding/installer/: grl_winusb_driver.iss  usbpd_gui.iss
USB_Decoding/live_logs/: 20260316_125121_bmc_debug.txt  20260316_125121_decoded.txt  20260316_125121_pd.txt  20260316_125121_power.txt  20260316_125121_trace.txt
USB_Decoding/samples/: grl_usb_capture.txt  quick_raw.decoded.json  quick_raw.decoded.txt  quick_raw.txt
USB_Decoding/scripts/: build_and_sign_grl_driver_catalog.cmd  build_and_sign_grl_driver_catalog.ps1  build_driver_installer.cmd  build_driver_installer.ps1  build_driver_package.cmd  build_driver_package.ps1  build_exe.ps1  build_gui_exe.ps1  build_installer.ps1  build_partner_center_submission.cmd  build_partner_center_submission.ps1  build_portable_grl_driver_installer.cmd  build_portable_grl_driver_installer.ps1  grl_winusb_driver_README.txt  import_partner_center_signed_driver.cmd  import_partner_center_signed_driver.ps1  install_grl_winusb_driver.cmd  install_grl_winusb_driver.ps1
USB_Decoding/tests/: test_grl_bmc.py  test_grl_sniffer.py  test_pd_decoder.py  test_windows_driver.py
USB_Decoding/usb_pd_decoder/: cli.py  gui.py  models.py  packet_reassembly.py  usb_read.py  (+1 more)
(+31 files in other folders)
